tests/baselines/reference/parserErrorRecovery_ParameterList5.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ParameterList5.ts (1 errors) ====
    (a:number => { }
              ~~
!!! parserErrorRecovery_ParameterList5.ts(1,11): error TS1005: ')' expected.